--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 .env
 .DS_Store
+/src/__pycache__
+/src/__pycache__
+/src/agents/__pycache__
+/src/__pycache__
+/output-adrs/abelaa
+/src/nodes/__pycache__
