--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,28 @@
 # Core LangChain dependencies
-langchain-core>=0.3.0
-langchain-openai>=0.2.0
+langchain==1.0.2
+langchain-core==1.2.16
+langchain-openai==1.0.1
 
 # LLM Providers
-langchain-groq>=0.2.0
-langchain-google-genai>=0.1.0
+langchain-groq==1.1.2
+langchain-google-genai==4.2.1
 
 # Workflow orchestration
-langgraph>=0.2.0
+langgraph==1.0.1
 
 # Configuration
-pydantic>=2.0.0
-pydantic-settings>=2.0.0
-python-dotenv>=1.0.0
+pydantic==2.12.5
+pydantic-settings==2.12.0
+python-dotenv==1.2.1
 
 # YAML configuration
-pyyaml>=6.0.0
+pyyaml==6.0.2
 
 # Utilities
-python-dateutil>=2.8.0
+python-dateutil==2.9.0.post0
+
+# Visualization (for workflow graphs)
+ipython==9.1.0
 
 # Optional: For future providers (not yet implemented)
 # langchain-anthropic>=0.2.0   # Claude support
